--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,10 @@
 			integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
 			crossorigin="anonymous"
 		></script>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
 		<title>Tutor Connect</title>
